--- a/style.css
+++ b/style.css
@@ -22,3 +22,13 @@ html.dark {
   background-color: #111;
   color: var(--primary-color);
 }
+
+body {
+  font-family: "Heebo", sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0;
+}
