styled the clock container class and also the clock class

--- a/style.css
+++ b/style.css
@@ -47,3 +47,16 @@ body {
 .toggle:focus {
   outline: none;
 }
+
+.clock-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.clock {
+  position: relative;
+  width: 200px;
+  height: 200px;
+}
